<resources>
    <string name="app_name">Beyond Thrift</string>

    <string name="google_maps_key">AIzaSyD1Zmm7beXAxoydo7doRKkCOAt72W51ZbE</string>

    <!-- Activity titles -->

    <string name="title_activity_person">Family Map: Person Detials</string>
    <string name="title_activity_filter">Family Map: Filter</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Main Activity Strings -->
    <string-array name="main_drawer_items">
        <item>News &amp; Events</item>
        <item>Drop Off Locations</item>
        <item>Schedule a Pick Up</item>
        <item>View Items to Pick Up</item>
        <item>Cash Donation</item>
        <item>About Us</item>
        <item>Settings</item>
    </string-array>

    <!-- PromotionsFragment Strings -->
    <string name="upcoming_discounts_header_string">50% Off Saturday Sale</string>
    <string name="upcoming_discounts_subheader">West Valley and Orem Stores Every Saturday</string>
    <string name="upcoming_discounts_string">Sale includes: Clothing, linens and shoes.
        \nExcludes: Current and white tags, furniture, jewelry and hard goods. </string>
    <string name="coupons_header_string">Coupons</string>
    <string name="news_header_string">Check Out our New Mobile App</string>
    <string name="news_string">Make donations, schedule pickups, locate stores and bins, and find events and promotions from our mobile app!</string>
    <!-- OnboardingFragment Strings -->
    <string name="onboarding_text">Make donations, provide service by picking up donations and find information about clothing drives all in one app</string>
    <string name="button_get_started">Get Started</string>

    <!-- Action Item Labels -->
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_settings">Settings</string>

    <!-- Login/Register Input Labels -->
    <string name="label_sign_in">Sign In</string>
    <string name="label_register">Register</string>
    <string name="label_gender">Gender</string>
    <string name="label_email">Email</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_first_name">First Name</string>
    <string name="label_password">Password</string>
    <string name="label_username">Username</string>
    <string name="label_server_port">Server Port</string>
    <string name="label_server_host">Server Host</string>

    <!-- Login/Register Default Values-->
    <string name="default_server_host">10.25.56.79</string>
    <!--<string name="default_server_host">192.168.2.46</string>-->
    <string name="default_server_port">1234</string>
    <string name="default_username">Username</string>
    <string name="default_password">Password</string>
    <string name="default_first_name">FirstName</string>
    <string name="default_last_name">LastName</string>
    <string name="default_email">email@site.com</string>


    <string name="prompt_click_marker">Click a marker to see details</string>
    <string name="connection_failed">Connection Failed</string>

    <!-- Strings related to Settings -->

    <string name="toast_resync_failed">Re-sync failed</string>
    <string name="toast_logout">Logout</string>
    <string name="home_address_string">Home Address</string>
    <string name="change_address_string">Click to Change Address</string>
    <string name="user_home_address">124 W 450 N Provo, UT 84601</string>
    <string name="email_address_string">Email Address</string>
    <string name="user_email_address">charity@charity.org</string>
    <string name="email_receipts">Email Receipts</string>
    <string name="vehicle_capacity_string">Vehicle Capacity</string>
    <string name="notifications_setting_string">Send me Notifications</string>
    <string name="logout_text">Logout</string>

    <string-array name="settings_titles">
        <item>Life Story Lines</item>
        <item>Family Tree Lines</item>
        <item>Spouse Lines</item>
        <item>Map Type</item>
        <item>Re-sync Data</item>
        <item>Logout</item>
    </string-array>

    <string-array name="settings_descriptions">
        <item>Show life story lines</item>
        <item>Show family tree lines</item>
        <item>Show spouse lines</item>
        <item>Background display on map</item>
        <item>From familymap service</item>
        <item>Returns to login screen</item>
    </string-array>

    <string-array name="settings_line_color_names">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>

    <string-array name="settings_map_types">
        <item>Normal</item>
        <item>Satellite</item>
        <item>Terrain</item>
        <item>Hybrid</item>
    </string-array>

    <!-- Filter strings -->

    <string name="filter_title">%s Events</string>
    <string name="filter_description">Filter by %s events</string>
    <string name="filter_title_fathers_side">Father\'s Side</string>
    <string name="filter_description_fathers_side">Filter by father\'s side of family</string>
    <string name="filter_title_mothers_side">Mother\'s Side</string>
    <string name="filter_description_mothers_side">Filter by mother\'s side of family</string>
    <string name="filter_title_male_events">Male Events</string>
    <string name="filter_description_male_events">Filter events based on gender</string>
    <string name="filter_title_female_events">Female Events</string>
    <string name="filter_description_female_events">Filter events based on gender</string>

    <!-- genders -->

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <!-- Person Activity Strings -->

    <string name="life_events">Life Events</string>
    <string name="family">Family</string>

    <string-array name="relationships">
        <item>Spouse</item>
        <item>Father</item>
        <item>Mother</item>
        <item>Child</item>
    </string-array>

    <!-- content descriptions -->

    <string name="icon_expand_list">Expand List Icon</string>
    <string name="icon_gender">Gender Icon</string>
    <string name="icon_gender_or_map">Gender or Map Icon</string>

    <!-- facebook -->
    <string name="facebook_app_id">133551727370732</string>
    <string name="fb_login_protocol_scheme">fb133551727370732</string>



</resources>
