<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.trevinavery.beyondthrift.app.PersonActivity">

    <LinearLayout
        style="@style/list_item_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/firstNameTextView"
            style="@style/list_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/firstNameLabelTextView"
            style="@style/list_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_first_name"/>

    </LinearLayout>

    <View style="@style/horizontal_line"/>

    <LinearLayout
        style="@style/list_item_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lastNameTextView"
            style="@style/list_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/lastNameLabelTextView"
            style="@style/list_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_last_name"/>

    </LinearLayout>

    <View style="@style/horizontal_line"/>

    <LinearLayout
        style="@style/list_item_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/genderTextView"
            style="@style/list_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/genderLabelTextView"
            style="@style/list_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_gender"/>

    </LinearLayout>

    <View style="@style/horizontal_line"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

</LinearLayout>