<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">





    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp">



            <ImageView
                android:id="@+id/id_upcoming_discounts_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:src="@drawable/clothes_img"/>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >
                <TextView
                    android:id="@+id/id_upcoming_discounts_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming_discounts_header_string"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/blue"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming_discounts_subheader"
                    android:textSize="16dp"
                    android:textColor="#000000"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="5dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming_discounts_string"
                    android:textSize="12dp"
                    android:textColor="#000000"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="390dp"
            android:layout_gravity="center"
            android:layout_height="1dp"
            android:background="#000000" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp">



            <ImageView
                android:id="@+id/id_news_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:src="@drawable/new_app_img"/>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >
                <TextView
                    android:id="@+id/id_news_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_header_string"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/blue"
                    android:layout_marginBottom="0dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/news_string"
                    android:textSize="12dp"
                    android:textColor="#000000"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="10dp"
                    />




            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="390dp"
            android:layout_gravity="center"
            android:layout_height="1dp"
            android:background="#000000" />


        <View
            android:layout_width="390dp"
            android:layout_gravity="center"
            android:layout_height="1dp"
            android:background="#000000" />







    </LinearLayout>







</ScrollView>
