<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <TextView
                android:id="@+id/id_home_address_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_address_string"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="0dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_address_string"

                android:textSize="12dp"
                android:layout_marginTop="0dp"
                />

        </LinearLayout>
        <TextView
            android:id="@+id/id_user_home_address"
            android:text="@string/user_home_address"
            android:layout_alignParentRight="true"
            android:layout_width="fill_parent"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            />
    </LinearLayout>

    <View
        android:layout_width="390dp"
        android:layout_gravity="center"
        android:layout_height="1dp"
        android:background="#D3D3D3"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <TextView
                android:id="@+id/id_email_address_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address_string"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Click to Change Email Address"

                android:textSize="12dp"
                android:layout_marginTop="0dp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/id_user_email_address"
            android:text="@string/user_email_address"
            android:layout_alignParentRight="true"
            android:layout_width="fill_parent"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            />
    </LinearLayout>
    <View
        android:layout_width="390dp"
        android:layout_gravity="center"
        android:layout_height="1dp"
        android:background="#D3D3D3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <TextView
                android:id="@+id/id_email_receipts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_receipts"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#000000"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Turn Donation receipts ON or OFF"
                android:textSize="12dp"
                android:layout_marginTop="0dp"
                />
        </LinearLayout>
        <Switch
            android:id="@+id/id_email_receipts_switch"
            android:checked="true"
            android:layout_alignParentRight="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

    <View
        android:layout_width="390dp"
        android:layout_gravity="center"
        android:layout_height="1dp"
        android:background="#D3D3D3" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp">
        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_capacity_string"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#000000"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select your car size"
                android:textSize="12dp"
                android:layout_marginTop="0dp"
                />
        </LinearLayout>

        <Spinner
            android:id="@+id/vehicle_type_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
    <View
        android:layout_width="390dp"
        android:layout_gravity="center"
        android:layout_height="1dp"
        android:background="#D3D3D3" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <TextView
                android:id="@+id/id_send_notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications_setting_string"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#000000"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Get notified when there's a new pickup available"

                android:textSize="12dp"
                android:layout_marginTop="0dp"
                />

        </LinearLayout>
        <Switch
            android:id="@+id/id_notifications_switch"
            android:checked="true"
            android:layout_alignParentRight="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
    <View
        android:layout_width="390dp"
        android:layout_gravity="center"
        android:layout_height="1dp"
        android:background="#D3D3D3" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <TextView
                android:id="@+id/logout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout_text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#000000"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Return to main screen"

                android:textSize="12dp"
                android:layout_marginTop="0dp"
                />
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="390dp"
        android:layout_gravity="center"
        android:layout_height="1dp"
        android:background="#D3D3D3" />
</LinearLayout>